i finished my project and i added my design

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         </section>
         <section>
             <form>
-                <label for="max">Max</label><br>
-                <input type="text" id="max">
-                <label for="min">Min</label><br>
-                <input type="text" id="min">
+                <div class="columnOne">
+                    <label for="max">Max</label>
+                    <input type="text" id="max">
+                </div>
+                <div class="columnTwo">
+                    <label for="min">Min</label>
+                    <input type="text" id="min">
+                </div>
             </form>
             <button id="generate">Generate</button>
             <div id="div"></div>
